# top-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/backend/: app.rs  app_data_holder.rs  config.rs  cpu.rs  disk.rs  memory.rs  mock.rs  mod.rs  network.rs  pc_info.rs  process.rs  process_data_holder.rs  process_iterator.rs  process_list.rs  system_item.rs  temperatures.rs  utils.rs
src/backend/services/: arguments.rs  config.rs  logger.rs  mod.rs  service_handler.rs
src/backend/system/: app.rs  app_data_holder.rs  app_factory.rs  config.rs  disk.rs  memory.rs  mock.rs  mod.rs  network.rs  pc_info.rs  process.rs  sys_load.rs  system_item.rs  utils.rs
src/backend/utils/: bytes.rs
src/types/: IApp.rs  app_trait.rs  mod.rs  process_trait.rs  sort_by.rs  table_handler_trait.rs  temperature_traits.rs  ui_handler_trait.rs
src/types/enums/: log_level.rs  mod.rs  selected_table.rs  sort_by.rs  table_commands.rs  table_position.rs
src/types/traits/: app.rs  app_accessor.rs  arguments.rs  creatable.rs  disk.rs  logger.rs  mod.rs  process.rs  selected_table.rs  services.rs  spark_line_handler.rs  status_handler.rs  strings_line.rs  table_data_holder.rs  table_handler.rs  table_handler_fast.rs  ui_handler.rs
src/ui/: app_handler.rs  arguments.rs  config.rs  mod.rs  paths.rs  process_table.rs  runner.rs  ui.rs  ui_builder.rs  ui_handler.rs  util.rs  view.rs
src/ui/controls/: mod.rs  selected_table.rs  spark_line_handler.rs  status_handler.rs  table_handler.rs  table_handler_fast.rs
src/ui/elemets/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  pc_info.rs  (+2 more)
(+2 files in other folders)
