[package]
name = "top-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.10"
thread-priority = "0.15"

ratatui = "0.24.0"
crossterm = "0.27.0"
pretty-bytes = "0.2.2"
clap = { version = "4.4.8", features = ["derive"] }
simplelog = { version = "0.12.1", features = ["paris"] }

rayon = "1.8.0"
slice-deque = "0.3.0"
fast-str = { version = "1.0.0", features = ["serde"] }
